--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
         "nodemailer": "^6.9.3",
         "nodemon": "^3.0.1",
         "react-jwt": "^1.2.0",
-        "supertest": "^6.3.3"
-    },
-    "devDependencies": {
-        "mocha": "^10.2.0",
+        "supertest": "^6.3.3",
         "mongodb": "^5.0.7",
         "mongodb-memory-server": "^8.13.0"
+    },
+    "devDependencies": {
+        "mocha": "^10.2.0"
     }
 }
